--- a/css/style.css
+++ b/css/style.css
@@ -297,7 +297,7 @@ ul.social-slide li i.mac{
   background: #fff;
 }
 .callbacks_here a:after{
-	background: #4985ce;	
+	background: #ff5735;	
 }
 a.callbacks_nav.callbacks2_nav.prev {
 background: transparent url("../images/2.png") no-repeat left top;
@@ -329,7 +329,7 @@ a.hvr-rectangle-out {
   backface-visibility: hidden;
   -moz-osx-font-smoothing: grayscale;
   position: relative;
-background:#4985ce;
+background:#ff5735;
   -webkit-transition-property: color;
   transition-property: color;
   -webkit-transition-duration: 0.3s;
@@ -462,7 +462,7 @@ font-size: 14px;
     padding: 0 0 10px 0;
 	}
 .navigation ul li a:hover,.navigation ul li a.active{
-    color: #4985ce;
+    color: #ff5735;
 }
 .navigation ul li:nth-child(4) {
   margin-left: 0;
@@ -502,7 +502,7 @@ a.hvr-overline-from-center:before {
   left: 50%;
   right: 50%;
   bottom: 0;
-  background: #4985ce;
+  background: #ff5735;
   height: 3px;
   -webkit-transition-property: left, right;
   transition-property: left, right;
@@ -533,7 +533,7 @@ min-height: 730px;
 .banner-info h3 {
    font-family: 'Righteous-Regular';
 font-size: 70px;
-color: #4985ce;
+color: #ff5735;
 }
 .banner-info h4 {
 color: #fff;
@@ -578,7 +578,7 @@ text-transform:uppercase;
 }
 .welcome-head h4 {
    font-family: 'Righteous-Regular';
-    color: #4985ce;
+    color: #ff5735;
     font-size: 22px;
     text-align: center;
     margin-top: 32px;
@@ -616,7 +616,7 @@ img.zoom-img:hover {
 /*-- //welcome --*/
 /*-- specials --*/
 .specials{
-background:#4985ce;
+background:#ff5735;
 }
 h3.tittle.t-two {
     color: #fff;
@@ -676,7 +676,7 @@ width:100%;
 }
 .services-bottom-grd-right h4 {
    font-family: 'Righteous-Regular';
-    color: #4985ce;
+    color: #ff5735;
     text-transform: uppercase;
     line-height: 1.5em;
     font-size: 22px;
@@ -817,7 +817,7 @@ figure.effect-bubba:hover p {
   padding:0;
 	}
 .footer{
-background: #4985ce;
+background: #ff5735;
 padding:50px 0;
 }
 .footer-grid h4{
@@ -871,7 +871,7 @@ text-decoration:none;
 color:#fff;
 }
 .copy-right p a:hover{
-color:#4985ce;
+color:#ff5735;
 }
 .strip1 {
     background: url(../images/top-line1.png) repeat-x;
@@ -903,7 +903,7 @@ text-decoration:none;
 	font-size: 14px;
 	color: #fff;
     padding: 9px 20px;
-	background:#4985ce;
+	background:#ff5735;
 	}
 
 .blog-post p.erat{
@@ -920,10 +920,10 @@ text-decoration:none;
  	 padding: 0em;
 	}
 	.admin-tag1 p a {
- 	 color: #4985ce;
+ 	 color: #ff5735;
 	}
 	.admin-tag p a {
- 	 color: #4985ce;
+ 	 color: #ff5735;
 	}
 	.sing-img-text1 h3 {
 	  margin-bottom: 0 !important;
@@ -979,7 +979,7 @@ text-decoration:none;
   border: 1px solid #eaeaea;
 }
 .blog-pagenat ul li a:hover {
-   background-color:#4985ce;
+   background-color:#ff5735;
   color:#fff;
   border: 1px solid #eaeaea;
 }
@@ -1028,7 +1028,7 @@ p.est span{
     float: right;
 }
 .media-body a:hover{
-	color:#4985ce;
+	color:#ff5735;
 	text-decoration:none;
 }
 .media-body p{
@@ -1047,7 +1047,7 @@ p.est span{
     font-size: 14px;
     outline: none;
     border: 1px solid #D2D2D2;
-    color: #4985ce;
+    color: #ff5735;
 	}
 .leave-a-comment input[type="text"]{
 	float:left;
@@ -1078,7 +1078,7 @@ p.est span{
 	
 	}
 .leave-a-comment input[type="submit"]:hover{
-	background:#4985ce;
+	background:#ff5735;
 	color:#fff;
 	text-decoration:none;
 	}
@@ -1126,11 +1126,11 @@ p.est span{
     margin-top: 2em;
 }
 .search11 input[type="submit"]:hover{
-	background:#4985ce;
+	background:#ff5735;
 	color:#fff ;
 }
 .search11 h3{
-    color: #4985ce;
+    color: #ff5735;
     font-size: 22px;
     text-transform: uppercase;
    font-family: 'Righteous-Regular';
@@ -1164,7 +1164,7 @@ p.est span{
 }
 .categories ul li a:hover{
 	text-decoration:none;
-	color:#4985ce;
+	color:#ff5735;
 	padding-left:7px;
 	  transition: 0.5s all;
   -webkit-transition: 0.5s all;
@@ -1191,7 +1191,7 @@ p.est span{
     border-radius: 50%;
 }
 .categories h3,.search h3,.related-posts h3,.leave-a-comment h3,.sing-img-text h3 {
-    color: #4985ce;
+    color: #ff5735;
     font-size: 22px;
     text-transform: uppercase;
    font-family: 'Righteous-Regular';
@@ -1238,7 +1238,7 @@ p.est span{
 }
 .related-post-right h4 a:hover{
 	text-decoration:none;
-	color:#4985ce;
+	color:#ff5735;
 }
 .related-post-right p {
     margin: 0;
@@ -1429,7 +1429,7 @@ p.your-para {
   min-height:180px;
 }
 .contact-in h4{
-  color: #4985ce;
+  color: #ff5735;
   font-size: 22px;
   margin: 0 0 15px 0;
   line-height: 1.5em;
@@ -1458,7 +1458,7 @@ text-decoration:none;
   color: #464646;
 }
 .address-left p a:hover {
-	color: #4985ce;
+	color: #ff5735;
 }
 .more-address{
 	padding:2em 0;
@@ -1486,7 +1486,7 @@ text-decoration:none;
   letter-spacing:1px;
 }
 .send input[type="submit"]:hover {
-  background:#4985ce;
+  background:#ff5735;
 }
 /*-- //contact-page --*/
 /*-- services-page --*/
@@ -1505,7 +1505,7 @@ text-decoration:none;
 .ser-spa span {
   font-size: 33px;
   color: #fff;
-  background:#4985ce;
+  background:#ff5735;
   border-radius: 100%;
   padding: 25px 25px;
   text-align: center;
@@ -1540,7 +1540,7 @@ width: 80%;
   -moz-border-radius:60%;
 }
 .services-left p:hover{
-  background: #4985ce;
+  background: #ff5735;
   border-radius:0%;
   -webkit-border-radius:0%;
   -o-border-radius:0%;
@@ -1555,7 +1555,7 @@ transition: .5s all;
 .services-right h3{
   margin: 0px 0 0 0;
   font-size: 19px;
-  color: #4985ce;
+  color: #ff5735;
   line-height: 1.5em;
    font-family: 'Righteous-Regular';
 }
@@ -1569,7 +1569,7 @@ transition: .5s all;
 margin-top:50px;
 }
 .serv-list-info h3 span {
-  color: #4985ce;
+  color: #ff5735;
 }
 .services-list{
   background: url(../images/banner2.jpg) fixed;
@@ -1606,10 +1606,10 @@ line-height:2em;
 }
 .serv-list-grid ul li a:hover{
   padding-left: 38px;
- color: #4985ce;
+ color: #ff5735;
 }
 h3.tittle.t-three {
-  color: #4985ce;
+  color: #ff5735;
 }
 /*-- //services-page --*/
 /*-- gallery-page --*/
@@ -1649,7 +1649,7 @@ h3.tittle.t-three {
    opacity: 1;
 }
 .view-seventh .mask {
-   background-color:#4985ce;
+   background-color:#ff5735;
    -webkit-transform: rotate(0deg) scale(1);
    -moz-transform: rotate(0deg) scale(1);
    -o-transform: rotate(0deg) scale(1);
@@ -1792,7 +1792,7 @@ width:100%;
 .about-grid h3{
   font-size: 19px;
   margin: 0;
-  color: #4985ce;
+  color: #ff5735;
    font-family: 'Righteous-Regular';
 }
 .about-grid p{
@@ -1813,7 +1813,7 @@ width:100%;
 }
 .ad-left p {
 	color: #fff;
-	background: #4985ce;
+	background: #ff5735;
 	padding: 13px 0px;
 	border-radius: 50%;
 	-webkit-border-radius: 50%;
@@ -1832,11 +1832,11 @@ line-height:1.5em;
 text-transform:uppercase;
   font-size: 19px;
   margin: 0;
-  color: #4985ce;
+  color: #ff5735;
    font-family: 'Righteous-Regular';
 }
 .ad-right h4 a{
-  color: #4985ce;
+  color: #ff5735;
 }
 .ad-right p {
   color: #464646;
@@ -1868,7 +1868,7 @@ text-transform:uppercase;
   color: #464646;
 }
 .advn-two ul li a:hover{
-	  color: #4985ce;
+	  color: #ff5735;
       margin-left: 10px;
 }
 h3.tittle.t-four {
@@ -1933,7 +1933,7 @@ border:5px solid #fff;
   padding-left: 0;
 }
 .team{
-background: #4985ce;
+background: #ff5735;
 }
 /*-- //about-page --*/
 
