--- a/css/style.css
+++ b/css/style.css
@@ -301,7 +301,7 @@ ul.social-slide li i.mac{
   background: #fff;
 }
 .callbacks_here a:after{
-	background: #4985ce;	
+	background: #3D45B3;	
 }
 a.callbacks_nav.callbacks2_nav.prev {
 background: transparent url("../images/2.png") no-repeat left top;
@@ -333,7 +333,7 @@ a.hvr-rectangle-out {
   backface-visibility: hidden;
   -moz-osx-font-smoothing: grayscale;
   position: relative;
-background:#4985ce;
+background:#3D45B3;
   -webkit-transition-property: color;
   transition-property: color;
   -webkit-transition-duration: 0.3s;
@@ -466,7 +466,7 @@ font-size: 14px;
     padding: 0 0 10px 0;
 	}
 .navigation ul li a:hover,.navigation ul li a.active{
-    color: #4985ce;
+    color: #3D45B3;
 }
 .navigation ul li:nth-child(4) {
   margin-left: 0;
@@ -506,7 +506,7 @@ a.hvr-overline-from-center:before {
   left: 50%;
   right: 50%;
   bottom: 0;
-  background: #4985ce;
+  background: #3D45B3;
   height: 3px;
   -webkit-transition-property: left, right;
   transition-property: left, right;
@@ -537,7 +537,7 @@ min-height: 730px;
 .banner-info h3 {
    font-family: 'Righteous-Regular';
 font-size: 70px;
-color: #4985ce;
+color: #3D45B3;
 }
 .banner-info h4 {
 color: #fff;
@@ -546,7 +546,7 @@ font-size: 26px;
 }
 .banner-info {
 width: 43%;
-float:right;
+float:left;
 margin-top: 182px;
 }
 .banner-info a{
@@ -582,7 +582,7 @@ text-transform:uppercase;
 }
 .welcome-head h4 {
    font-family: 'Righteous-Regular';
-    color: #4985ce;
+    color: #3D45B3;
     font-size: 22px;
     text-align: center;
     margin-top: 32px;
@@ -620,7 +620,7 @@ img.zoom-img:hover {
 /*-- //welcome --*/
 /*-- specials --*/
 .specials{
-background:#4985ce;
+background:#3D45B3;
 }
 h3.tittle.t-two {
     color: #fff;
@@ -680,7 +680,7 @@ width:100%;
 }
 .services-bottom-grd-right h4 {
    font-family: 'Righteous-Regular';
-    color: #4985ce;
+    color: #3D45B3;
     text-transform: uppercase;
     line-height: 1.5em;
     font-size: 22px;
@@ -821,13 +821,13 @@ figure.effect-bubba:hover p {
   padding:0;
 	}
 .footer{
-background: #4985ce;
+background: #3D45B3;
 padding:50px 0;
 }
 .footer-grid h4{
 margin:0 0 30px 0;
 font-size:22px;
-color:#fff;
+color:white;
    font-family: 'Righteous-Regular';
 }
 .footer-grid h2{
@@ -850,12 +850,12 @@ padding:0;
 .footer-grid ul li{
 list-style-type:none;
 font-size:14px;
-color:#464646;
+color:white;
 line-height:2em;
 }
 .footer-grid ul li a{
 text-decoration:none;
-color:#464646;
+color:white;
 }
 .footer-grid ul li a:hover{
 color:#fff;
@@ -875,7 +875,7 @@ text-decoration:none;
 color:#fff;
 }
 .copy-right p a:hover{
-color:#4985ce;
+color:#3D45B3;
 }
 .strip1 {
     background: url(../images/top-line1.png) repeat-x;
@@ -907,7 +907,7 @@ text-decoration:none;
 	font-size: 14px;
 	color: #fff;
     padding: 9px 20px;
-	background:#4985ce;
+	background:#3D45B3;
 	}
 
 .blog-post p.erat{
@@ -924,10 +924,10 @@ text-decoration:none;
  	 padding: 0em;
 	}
 	.admin-tag1 p a {
- 	 color: #4985ce;
+ 	 color: #3D45B3;
 	}
 	.admin-tag p a {
- 	 color: #4985ce;
+ 	 color: #3D45B3;
 	}
 	.sing-img-text1 h3 {
 	  margin-bottom: 0 !important;
@@ -983,7 +983,7 @@ text-decoration:none;
   border: 1px solid #eaeaea;
 }
 .blog-pagenat ul li a:hover {
-   background-color:#4985ce;
+   background-color:#3D45B3;
   color:#fff;
   border: 1px solid #eaeaea;
 }
@@ -1032,7 +1032,7 @@ p.est span{
     float: right;
 }
 .media-body a:hover{
-	color:#4985ce;
+	color:#3D45B3;
 	text-decoration:none;
 }
 .media-body p{
@@ -1051,7 +1051,7 @@ p.est span{
     font-size: 14px;
     outline: none;
     border: 1px solid #D2D2D2;
-    color: #4985ce;
+    color: #3D45B3;
 	}
 .leave-a-comment input[type="text"]{
 	float:left;
@@ -1082,7 +1082,7 @@ p.est span{
 	
 	}
 .leave-a-comment input[type="submit"]:hover{
-	background:#4985ce;
+	background:#3D45B3;
 	color:#fff;
 	text-decoration:none;
 	}
@@ -1130,11 +1130,11 @@ p.est span{
     margin-top: 2em;
 }
 .search11 input[type="submit"]:hover{
-	background:#4985ce;
+	background:#3D45B3;
 	color:#fff ;
 }
 .search11 h3{
-    color: #4985ce;
+    color: #3D45B3;
     font-size: 22px;
     text-transform: uppercase;
    font-family: 'Righteous-Regular';
@@ -1168,7 +1168,7 @@ p.est span{
 }
 .categories ul li a:hover{
 	text-decoration:none;
-	color:#4985ce;
+	color:#3D45B3;
 	padding-left:7px;
 	  transition: 0.5s all;
   -webkit-transition: 0.5s all;
@@ -1195,7 +1195,7 @@ p.est span{
     border-radius: 50%;
 }
 .categories h3,.search h3,.related-posts h3,.leave-a-comment h3,.sing-img-text h3 {
-    color: #4985ce;
+    color: #3D45B3;
     font-size: 22px;
     text-transform: uppercase;
    font-family: 'Righteous-Regular';
@@ -1242,7 +1242,7 @@ p.est span{
 }
 .related-post-right h4 a:hover{
 	text-decoration:none;
-	color:#4985ce;
+	color:#3D45B3;
 }
 .related-post-right p {
     margin: 0;
@@ -1433,7 +1433,7 @@ p.your-para {
   min-height:180px;
 }
 .contact-in h4{
-  color: #4985ce;
+  color: #3D45B3;
   font-size: 22px;
   margin: 0 0 15px 0;
   line-height: 1.5em;
@@ -1462,7 +1462,7 @@ text-decoration:none;
   color: #464646;
 }
 .address-left p a:hover {
-	color: #4985ce;
+	color: #3D45B3;
 }
 .more-address{
 	padding:2em 0;
@@ -1490,7 +1490,7 @@ text-decoration:none;
   letter-spacing:1px;
 }
 .send input[type="submit"]:hover {
-  background:#4985ce;
+  background:#3D45B3;
 }
 /*-- //contact-page --*/
 /*-- services-page --*/
@@ -1509,7 +1509,7 @@ text-decoration:none;
 .ser-spa span {
   font-size: 33px;
   color: #fff;
-  background:#4985ce;
+  background:#3D45B3;
   border-radius: 100%;
   padding: 25px 25px;
   text-align: center;
@@ -1544,7 +1544,7 @@ width: 80%;
   -moz-border-radius:60%;
 }
 .services-left p:hover{
-  background: #4985ce;
+  background: #3D45B3;
   border-radius:0%;
   -webkit-border-radius:0%;
   -o-border-radius:0%;
@@ -1559,7 +1559,7 @@ transition: .5s all;
 .services-right h3{
   margin: 0px 0 0 0;
   font-size: 19px;
-  color: #4985ce;
+  color: #3D45B3;
   line-height: 1.5em;
    font-family: 'Righteous-Regular';
 }
@@ -1573,7 +1573,7 @@ transition: .5s all;
 margin-top:50px;
 }
 .serv-list-info h3 span {
-  color: #4985ce;
+  color: #3D45B3;
 }
 .services-list{
   background: url(../images/banner2.jpg) fixed;
@@ -1610,10 +1610,10 @@ line-height:2em;
 }
 .serv-list-grid ul li a:hover{
   padding-left: 38px;
- color: #4985ce;
+ color: #3D45B3;
 }
 h3.tittle.t-three {
-  color: #4985ce;
+  color: #3D45B3;
 }
 /*-- //services-page --*/
 /*-- gallery-page --*/
@@ -1653,7 +1653,7 @@ h3.tittle.t-three {
    opacity: 1;
 }
 .view-seventh .mask {
-   background-color:#4985ce;
+   background-color:#3D45B3;
    -webkit-transform: rotate(0deg) scale(1);
    -moz-transform: rotate(0deg) scale(1);
    -o-transform: rotate(0deg) scale(1);
@@ -1796,7 +1796,7 @@ width:100%;
 .about-grid h3{
   font-size: 19px;
   margin: 0;
-  color: #4985ce;
+  color: #3D45B3;
    font-family: 'Righteous-Regular';
 }
 .about-grid p{
@@ -1817,7 +1817,7 @@ width:100%;
 }
 .ad-left p {
 	color: #fff;
-	background: #4985ce;
+	background: #3D45B3;
 	padding: 13px 0px;
 	border-radius: 50%;
 	-webkit-border-radius: 50%;
@@ -1836,11 +1836,11 @@ line-height:1.5em;
 text-transform:uppercase;
   font-size: 19px;
   margin: 0;
-  color: #4985ce;
+  color: #3D45B3;
    font-family: 'Righteous-Regular';
 }
 .ad-right h4 a{
-  color: #4985ce;
+  color: #3D45B3;
 }
 .ad-right p {
   color: #464646;
@@ -1872,7 +1872,7 @@ text-transform:uppercase;
   color: #464646;
 }
 .advn-two ul li a:hover{
-	  color: #4985ce;
+	  color: #3D45B3;
       margin-left: 10px;
 }
 h3.tittle.t-four {
@@ -1937,7 +1937,7 @@ border:5px solid #fff;
   padding-left: 0;
 }
 .team{
-background: #4985ce;
+background: #3D45B3;
 }
 /*-- //about-page --*/
 
@@ -2316,6 +2316,7 @@ background: #4985ce;
 	}
 	.footer {
 	  padding: 35px 0;
+    color: white;
 	}
 	.about-grid-left {
 	  float: left;
@@ -2707,6 +2708,7 @@ background: #4985ce;
 	}
 	.footer-grid ul li {
 	  font-size: 13px;
+    color: white;
 	}
 	.ser-first-grid {
 	  float: left;
