--- a/css/style.css
+++ b/css/style.css
@@ -326,6 +326,7 @@ top: 9%;
 a.hvr-rectangle-out {
   display: inline-block;
   vertical-align: middle;
+  color: white;
   -webkit-transform: translateZ(0);
   transform: translateZ(0);
   box-shadow: 0 0 1px rgba(0, 0, 0, 0);
