union de informacion y enrutado de galeria y productos

--- a/views/header.html
+++ b/views/header.html
@@ -1,18 +1,20 @@
+<!-- header -->
 <div class="header-top">
 	<div class="container">
 				<div class="header-top-left">
-					<p>Frase de sabroricos</p>
+					<p>Saboreate con saladitos sabroricos</p>
 				</div>
 				<div class="header-top-mid">
-					<span class="glyphicon glyphicon-earphone" aria-hidden="true"></span><p>Llama para informacion: +664-123-4567</p>
+					<span class="glyphicon glyphicon-earphone" aria-hidden="true"></span><p>664-525-6812</p>
 				</div>
 				<div class="header-top-right">
 					<ul>
-						<li><a href="#" class="f1"> </a></li>
-						<li><a href="#" class="f2"> </a></li>
+						<li><a href="https://www.facebook.com/Sabroricos" class="f1"> </a></li>
+						<li><a href="https://www.facebook.com/Sabroricos" class="f2"> </a></li>
 						
 					</ul>
 				</div>
 				<div class="clearfix"></div>
 	</div>
 </div>
+<!-- //header -->
