--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,11 @@ Author URL: http://w3layouts.com
 License: Creative Commons Attribution 3.0 Unported
 License URL: http://creativecommons.org/licenses/by/3.0/
 --*/
+
+#active-blog{
+  background: #2A73DD;
+}
+
 html, body{
 	margin:0;
 	font-size: 100%;
