--- a/views/footer.html
+++ b/views/footer.html
@@ -6,17 +6,17 @@
 				<h4>DIRECCION</h4>
 				<ul >
 					<li>SABRORICOS</li>
-					<li>1234 calle 123</li>
-					<li>BC 29601 </li>
-					<li>Horario: Lun-Vie 9am - 6pm</li>
+					<li>Direccion: Tijuana, B.C, México</li>
+					<li>Calle Ricardo Castro, #319, colonia Nueva Tijuana</li>
+					
 				</ul>
 			</div>
 			<div class="col-md-3 footer-grid">
 				<h4>CONTACTO</h4>
 				<ul >
-					<li>Tel: +1 234-567-890</li>
-					<li>Fax: +1 646-216-9789</li>
-					<li>Email: <a href="mailto:info@sabroricos.com">info@sabroricos.com </a></li>
+					<li>Horario: Lun-Vie 9am - 6pm</li>
+					<li>Tel: 664-525-6812</li>
+					<li>Email: <a href="mailto:lokoalateconsabroricos@hotmail.com">lokoalateconsabroricos@hotmail.com</a></li>
 				</ul>
 			</div>
 			<div class="col-md-3 footer-grid">
