--- a/css/style.css
+++ b/css/style.css
@@ -59,7 +59,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 html, body{
 	margin:0;
 	font-size: 100%;
-	font-family: "Comic Sans MS", cursive, sans-serif;
+	font-family: 'Righteous-Regular';
 	background: #FFf;
 }
 body a {
@@ -81,7 +81,7 @@ input[type="button"],input[type="submit"]{
 	-ms-transition:0.5s all;
 }
 @font-face {
-   font-family: "Comic Sans MS", cursive, sans-serif;
+   font-family: 'Righteous-Regular';
    src: url(../fonts/Righteous-Regular.ttf)format('truetype');
 }
 h1,h2,h3,h4,h5,h6{
@@ -344,7 +344,7 @@ ul.social-slide li i.mac{
 .callbacks_tabs a:after {
   content: "\f111";
   font-size:0;
-  font-family: "Comic Sans MS", cursive, sans-serif;
+  font-family: 'Righteous-Regular';
   visibility: visible;
   display: block;
   width: 80px;
@@ -511,7 +511,7 @@ font-size: 14px;
 	display:inline-block;
 	}
 .navigation ul li a {
-   font-family: "Comic Sans MS", cursive, sans-serif;
+   font-family: 'Righteous-Regular';
 	color: #020202;
 	margin: 0px 22px;
 	font-size: 17px;
@@ -588,7 +588,7 @@ background-size:cover;
 min-height: 730px;
 }
 .banner-info h3 {
-   font-family: "Comic Sans MS", cursive, sans-serif;
+   font-family: 'Righteous-Regular';
 font-size: 70px;
 color: #2a73dd;
 }
@@ -621,7 +621,7 @@ margin-bottom: 30px;
 h3.tittle{
 margin-bottom: 45px;
 font-size:36px;
-   font-family: "Comic Sans MS", cursive, sans-serif;
+   font-family: 'Righteous-Regular';
 color: #000;
 text-align:center;
 text-transform:uppercase;
@@ -634,7 +634,7 @@ text-transform:uppercase;
   line-height: 2em;
 }
 .welcome-head h4 {
-   font-family: "Comic Sans MS", cursive, sans-serif;
+   font-family: 'Righteous-Regular';
     color: #2a73dd;
     font-size: 22px;
     text-align: center;
@@ -692,7 +692,7 @@ background:#fff;
 .special-right h4{
     line-height: 1.5em;
     font-size: 22px;
-   font-family: "Comic Sans MS", cursive, sans-serif;
+   font-family: 'Righteous-Regular';
     color: #000;
 }
 .special-right p {
@@ -733,10 +733,10 @@ width:100%;
 .time-service p {
     color: #000;
     font-size: 22px;
-    font-family: "Comic Sans MS", cursive, sans-serif;
+    font-family: 'Righteous-Regular';
 }
 .services-bottom-grd-right h4 {
-   font-family: "Comic Sans MS", cursive, sans-serif;
+   font-family: 'Righteous-Regular';
     color: #2a73dd;
     text-transform: uppercase;
     line-height: 1.5em;
@@ -850,7 +850,7 @@ figure.effect-bubba:hover p {
 }
 .special-left h4{
     font-size: 30px;
-   font-family: "Comic Sans MS", cursive, sans-serif;
+   font-family: 'Righteous-Regular';
     color: #000;
 }
 .special-left p{
@@ -885,13 +885,13 @@ padding:50px 0;
 margin:0 0 30px 0;
 font-size:22px;
 color:white;
-   font-family: "Comic Sans MS", cursive, sans-serif;
+   font-family: 'Righteous-Regular';
 }
 .footer-grid h2{
   margin: 30px 0 0px 0;
   font-size: 40px;
   color: #fff;
-   font-family: "Comic Sans MS", cursive, sans-serif;
+   font-family: 'Righteous-Regular';
 }
 .footer-grid h2 a{
 color: #fff;
@@ -1113,14 +1113,14 @@ p.est span{
 .leave-a-comment input[type="text"]{
 	float:left;
 	width:32%;
-	font-family: "Comic Sans MS", cursive, sans-serif;
+	font-family: 'Righteous-Regular';
 	}
 .leave-a-comment textarea{
 	resize:none;
 	height:200px;
 	width:100%;
     margin: 25px 0;
-	font-family: "Comic Sans MS", cursive, sans-serif;
+	font-family: 'Righteous-Regular';
 	}
 .leave-a-comment input[type="submit"]{
     color: #fff;
@@ -1194,7 +1194,7 @@ p.est span{
     color: #2a73dd;
     font-size: 22px;
     text-transform: uppercase;
-   font-family: "Comic Sans MS", cursive, sans-serif;
+   font-family: 'Righteous-Regular';
     padding-bottom: 18px;
 }
 .categories ul {
@@ -1255,7 +1255,7 @@ p.est span{
     color: #2a73dd;
     font-size: 22px;
     text-transform: uppercase;
-   font-family: "Comic Sans MS", cursive, sans-serif;
+   font-family: 'Righteous-Regular';
     padding-bottom: 18px;
 }
 .related-post-left{
@@ -1495,7 +1495,7 @@ p.your-para {
   margin: 0 0 15px 0;
   line-height: 1.5em;
   text-transform: uppercase;
-   font-family: "Comic Sans MS", cursive, sans-serif;
+   font-family: 'Righteous-Regular';
 }
 p.para1{
   color: #464646;
@@ -1552,7 +1552,7 @@ text-decoration:none;
 /*-- //contact-page --*/
 /*-- services-page --*/
 .ser-first-grid h3 {
-   font-family: "Comic Sans MS", cursive, sans-serif;
+   font-family: 'Righteous-Regular';
   margin: 26px 0 10px 0;
   color: #464646;
   font-size: 19px;
@@ -1618,7 +1618,7 @@ transition: .5s all;
   font-size: 19px;
   color: #2a73dd;
   line-height: 1.5em;
-   font-family: "Comic Sans MS", cursive, sans-serif;
+   font-family: 'Righteous-Regular';
 }
 .services-right p{
   margin: 7px 0 0 0;
@@ -1822,7 +1822,7 @@ h3.tittle.t-three {
 .view h4 {
   text-transform: uppercase;
   color: #e6e6e6;
-   font-family: "Comic Sans MS", cursive, sans-serif;
+   font-family: 'Righteous-Regular';
   text-align: center;
   position: relative;
   font-size: 24px;
@@ -1854,7 +1854,7 @@ width:100%;
   font-size: 19px;
   margin: 0;
   color: #2a73dd;
-   font-family: "Comic Sans MS", cursive, sans-serif;
+   font-family: 'Righteous-Regular';
 }
 .about-grid p{
   color: #464646;
@@ -1894,7 +1894,7 @@ text-transform:uppercase;
   font-size: 19px;
   margin: 0;
   color: #2a73dd;
-   font-family: "Comic Sans MS", cursive, sans-serif;
+   font-family: 'Righteous-Regular';
 }
 .ad-right h4 a{
   color: #2a73dd;
